tests/negative/neg_case_range_choice.safe
-- Test: neg_case_range_choice
-- Description: Range choices are outside the PR11.2 case subset.
-- Expected: REJECT unsupported_source_construct

package neg_case_range_choice

   function classify (value : in integer) returns integer

      case value
         when 1 to 3
            return 1;

         when others
            return 0;

